# zeroe-package

./: README.md  pyproject.toml
experiments/: gen_datasets.py  run_lm.py  run_pos.py  run_snli.py  run_tc.py  test_simple_attacks.py
src/zeroe/attacks/: simple_attacks.py
src/zeroe/attacks/visual/: viper_ices.py
src/zeroe/models/: g2pp2g.py
src/zeroe/utils/: paths.py
test/: run_lm.py  run_pos.py  run_snli.py  run_tc.py
